--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -20,8 +20,8 @@ section {
 }
 .GameCard {
   display: grid;
-  grid-template-columns: 20% 80%;
-  grid-template-areas: "img content";
+  grid-template-columns: 20% 50% 30%;
+  grid-template-areas: "img content form";
   align-items: center;
 }
 .GameCard img {
@@ -30,6 +30,9 @@ section {
 }
 .GameCard .card-content {
   grid-area: content;
+}
+.GameCard form {
+  grid-area: form;
 }
 
 /*# sourceMappingURL=App.css.map */
