--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -27,8 +27,8 @@ section {
 
 .GameCard{
   display: grid;
-  grid-template-columns: 20% 80%;
-  grid-template-areas: 'img content';
+  grid-template-columns: 20% 50% 30%;
+  grid-template-areas: 'img content form';
   align-items: center;
 
   img {
@@ -38,5 +38,9 @@ section {
 
   .card-content {
     grid-area: content;
+  }
+
+  form {
+    grid-area: form;
   }
 }
