--- a/src/styles/sass/layout/_grid.scss
+++ b/src/styles/sass/layout/_grid.scss
@@ -3,6 +3,7 @@
 #root {
   width: 100vw;
   height: 100vh;
+  max-height: -webkit-fill-available;
   display: grid;
   grid-template-rows: [screen-top] 90% [row1-end] 10% [screen-bottom];
   grid-template-columns: [screen-left] 100% [screen-right];
@@ -14,14 +15,17 @@
 
 main {
   grid-area: main;
+  height: 100%;
+  width: 100%;
 }
 
 @media screen and (min-width: $large-breakpoint) {
   #root {
-    grid-template-rows: [screen-top] 10% [row1-end] 90% [screen-bottom];
+    grid-template-rows: [screen-top] 7% [row1-end] 93% [screen-bottom];
     grid-template-areas:
       "navBar"
       "main"
     ;
+    // height: 100vh;
   }
 }
