--- a/src/styles/sass/utils/_fonts.scss
+++ b/src/styles/sass/utils/_fonts.scss
@@ -1,1 +1,3 @@
-@use '../../fonts/PlayfulWorld/font-face'; 
+@use '../../fonts/PlayfulWorld/PlayfulWorld'; 
+@use '../../fonts/PlayfulMono/PlayfulMono';
+@use '../../fonts/Funtime/Funtime';
