--- a/src/styles/fonts/PlayfulMono/PlayfulMono.scss
+++ b/src/styles/fonts/PlayfulMono/PlayfulMono.scss
@@ -1,13 +1,14 @@
 @font-face {
-    $path: '../fonts/PlayfulWorld/PlayfulWorldRegular';
-    font-family: 'PlayfulWorld';
+    $path: '../fonts/PlayfulMono/PlayfulMonoFreePersonal-Reg';
+    font-family: 'Playful Mono';
     src: url('#{$path}.eot');
     src: url('#{$path}.eot?#iefix') format('embedded-opentype'),
         url('#{$path}.woff2') format('woff2'),
         url('#{$path}.woff') format('woff'),
         url('#{$path}.ttf') format('truetype'),
-        url('#{$path}.svg#PlayfulWorldRegular') format('svg');
+        url('#{$path}.svg#PlayfulMonoFreePersonal-Reg') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
+
