--- a/src/styles/sass/components/_picker.scss
+++ b/src/styles/sass/components/_picker.scss
@@ -42,12 +42,16 @@
 
   button {
     font-size: 2rem;
-    padding: .25rem .5rem;
-    border-radius: 10px;
+    padding: 0 .5rem .5rem .5rem;
+    border-radius: 1.25rem;
     background-color: $primary-fill;
     border: 1px solid $primary-accent;
     color: $primary-background;
-    font-family: 'Playful World';
+    font-family: $primary-font;
+  }
+
+  img {
+    width: 50%;
   }
 }
 
@@ -125,4 +129,15 @@
   li {
     font-size: 1.5rem;
   }
+}
+
+.picker-page-4 {
+  grid-template-rows: 60% 20% 10% 10%;
+}
+
+#picked-card {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  grid-area: title;
 }
