--- a/src/styles/sass/utils/_vars.scss
+++ b/src/styles/sass/utils/_vars.scss
@@ -1,3 +1,5 @@
+// @use 'fonts';
+
 $white: #dff1fa;
 $light-blue: #8ecae6;
 $medium-blue: #219ebc;
@@ -19,3 +21,6 @@ $small-breakpoint: 600px;
 $medium-breakpoint: 768px;
 $large-breakpoint: 992px;
 $xl-breakpoint: 1200px;
+
+// Export fonts
+$primary-font: 'Fun Time';
