--- a/src/styles/sass/layout/_navbar.scss
+++ b/src/styles/sass/layout/_navbar.scss
@@ -1,11 +1,11 @@
 @use '../utils/vars' as *;
 
-nav {
+#main-nav {
   width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  grid-row: navBar;
+  grid-area: navBar;
 }
 
 .navBtn {
