--- a/src/styles/sass/App.scss
+++ b/src/styles/sass/App.scss
@@ -5,7 +5,8 @@
 
 @use 'layout/grid';
 @use 'layout/navbar'; 
-@use 'layout/profile';
+@use 'layout/main';
 
 @use 'components/picker';
 @use 'components/game-card';
+@use 'components/login';
