--- a/src/styles/sass/base/_general.scss
+++ b/src/styles/sass/base/_general.scss
@@ -9,11 +9,6 @@ body{
   background-color: $primary-background;
   color: $primary-font-color;
   font-family: $primary-font;
-  // padding: 5vh 0;
-
-  @media screen and (min-width: $large-breakpoint) {
-    padding: 0;
-  }
 }
 
 a {
@@ -23,6 +18,8 @@ a {
 }
 
 section {
+  height: 100%;
+  width: 100%;
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -36,4 +33,36 @@ section {
   > * {
     margin: 0 .5rem;
   }
+}
+
+.hidden {
+  display: none;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2.5rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .input-with-label {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+}
+
+label {
+  font-size: 1.5rem;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
