--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -228,7 +228,7 @@ section {
   font-family: "Fun Time";
 }
 .picker img {
-  width: 50%;
+  max-height: 100%;
 }
 
 .user-list {
@@ -306,7 +306,11 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 85%;
   grid-area: title;
+}
+#picked-card p {
+  font-size: 1.6rem;
 }
 
 .card-box {
@@ -349,12 +353,11 @@ section {
 
   .game-card {
     width: 32%;
-    max-height: 550px;
     margin: 1rem 0.6% 0;
   }
 
   .card-img {
-    max-width: 80%;
+    width: 80%;
   }
 }
 .login {
