--- a/src/styles/sass/components/_game-card.scss
+++ b/src/styles/sass/components/_game-card.scss
@@ -41,12 +41,12 @@
   .game-card{
     // flex-direction: row;
     width: 32%;
-    max-height: 550px;
+    // max-height: 550px;
     margin: 1rem .6% 0;
   }
 
   .card-img {
-    max-width: 80%;
+    width: 80%;
   }
 }
 
