--- a/src/styles/sass/components/_login.scss
+++ b/src/styles/sass/components/_login.scss
@@ -18,8 +18,9 @@
     align-items: center;
   }
 
-  input {
+  .form-button {
     background-color: $white;
     border-radius: .25rem;
+    margin-bottom: 5px;
   }
 }
